--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -39,12 +39,6 @@ on boot
     chmod 0664 /sys/class/power_supply/bms/voltage_ocv
 
     # Notification LED
-    chown system system /sys/class/leds/red/blink
-    chown system system /sys/class/leds/green/blink
-    chown system system /sys/class/leds/blue/blink
-    chown system system /sys/class/leds/red/led_time
-    chown system system /sys/class/leds/green/led_time
-    chown system system /sys/class/leds/blue/led_time
 	chmod 0664 /sys/class/leds/torch-light/brightness
 	chown system system /sys/class/leds/torch-light/brightness
 	restorecon /sys/class/leds/torch-light/brightness
@@ -92,7 +86,7 @@ on boot
 service vm_bms /system/vendor/bin/vm_bms
     class core
     user root
-    group root
+    group root wakelock
 
 on charger
    wait /dev/block/bootdevice/by-name/system
@@ -106,6 +100,7 @@ on charger
 service sensord /system/vendor/bin/sensord
     class main
     user root
+    group root readproc
 
 on property:init.svc.zygote=restarting
     restart sensord
