--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -87,13 +87,13 @@ on boot
     chmod 0664 /sys/board_properties/lenovo_flag
 
 service vm_bms /system/vendor/bin/vm_bms
-    class core
-    user root
-    group root wakelock
+    class main
+    user root system
+    group root system wakelock
 
 on charger
    wait /dev/block/bootdevice/by-name/system
-   mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
+   mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=0
    chown root system /sys/class/power_supply/bms/current_now
    chown root system /sys/class/power_supply/bms/voltage_ocv
    chmod 0664 /sys/class/power_supply/bms/current_now
