--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -27,21 +27,24 @@
 
 on boot
 #sensor
-    chown system input /sys/bus/i2c/devices/0-0041/enable_ps_sensor
-    chown system input /sys/bus/i2c/devices/0-0041/enable_als_sensor
-    chown system input /sys/bus/i2c/devices/0-0041/als_poll_delay
-    chown system input /sys/bus/i2c/devices/0-0041/pdata
-    chown system input /sys/bus/i2c/devices/0-0041/pilt
-    chown system input /sys/bus/i2c/devices/0-0041/piht
-    chown system input /sys/bus/i2c/devices/0-0041/type
-    chown system input /sys/bus/i2c/devices/0-0041/als_data
-    chown system input /sys/bus/i2c/devices/0-0041/pscali
+     chown system input /sys/bus/i2c/devices/0-0039/enable_ps_sensor
+    chown system input /sys/bus/i2c/devices/0-0039/enable_als_sensor
+    chown system input /sys/bus/i2c/devices/0-0039/als_poll_delay
+    chown system input /sys/bus/i2c/devices/0-0039/pdata
+    chown system input /sys/bus/i2c/devices/0-0039/pilt
+    chown system input /sys/bus/i2c/devices/0-0039/piht
+    chown system input /sys/bus/i2c/devices/0-0039/ppcount
+    chown system input /sys/bus/i2c/devices/0-0039/control
+    chown system input /sys/bus/i2c/devices/0-0039/type
+    chown system input /sys/bus/i2c/devices/0-0039/poffset
+    chown system input /sys/bus/i2c/devices/0-0039/als_data
+    chown system input /sys/bus/i2c/devices/0-0039/pscali
     chown system system /persist/prox_threshold_lo
     chown system system /persist/prox_threshold_hi
     chmod 0666 /persist/prox_threshold_lo
     chmod 0666 /persist/prox_threshold_hi
-    restorecon /sys/bus/i2c/devices/0-0041/pilt
-    restorecon /sys/bus/i2c/devices/0-0041/piht
+    restorecon /sys/bus/i2c/devices/0-0039/pilt
+    restorecon /sys/bus/i2c/devices/0-0039/piht
     chown system input /sys/class/input/input3/enable_device
     chown system input /sys/class/input/input3/delay
     chown system input /sys/class/input/input3/gsensor_cali_x
@@ -63,32 +66,14 @@ on boot
     chown system system /sys/board_properties/lenovo_flag
     chmod 0664 /sys/board_properties/lenovo_flag
 
-on init
-    # Configure zram and zswap
-    write /sys/block/zram0/comp_algorithm lz4
-    write /sys/module/zswap/parameters/compressor lz4
-    write /sys/module/zswap/parameters/zpool zsmalloc
-    write /sys/module/zswap/parameters/max_pool_percent 35
-    write /sys/module/zswap/parameters/enabled 1
+# access permission for secure touch
+    chmod 0660 /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0020/secure_touch_enable
+    chmod 0440 /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0020/secure_touch
+    chmod 0660 /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0070/secure_touch_enable
+    chmod 0440 /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0070/secure_touch
+    chown system drmrpc /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0020/secure_touch_enable
+    chown system drmrpc /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0020/secure_touch
+    chown system drmrpc /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0070/secure_touch_enable
+    chown system drmrpc /sys/devices/soc.0/78b9000.i2c/i2c-5/5-0070/secure_touch
 
-on post-fs
-    # VM tuning
-    write /proc/sys/vm/dirty_background_ratio 20
-    write /proc/sys/vm/dirty_expire_centisecs 200
-    write /proc/sys/vm/dirty_ratio 40
-    write /proc/sys/vm/page-cluster 0
-    write /proc/sys/vm/swappiness 30
-    write /proc/sys/vm/vfs_cache_pressure 65
 
-on post-fs-data
-    # Tune FS 
-    write /sys/block/mmcblk0/queue/add_random 0
-    write /sys/block/mmcblk0/queue/nr_requests 300
-    write /sys/block/mmcblk0/queue/rq_affinity 0
-
-on property:sys.boot_completed=1
-    write /sys/kernel/mm/ksm/pages_to_scan 100
-    write /sys/kernel/mm/ksm/sleep_millisecs 500
-    write /sys/kernel/mm/ksm/run 1
-    write /proc/sys/vm/min_free_kbytes 2919
-    write /proc/sys/vm/extra_free_kbytes 6075
