--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -71,6 +71,11 @@ on post-fs
     write /proc/sys/vm/swappiness 30
     write /proc/sys/vm/vfs_cache_pressure 65
 on post-fs-data
+    # Tune FS
+    write /sys/block/mmcblk0/queue/add_random 0
+    write /sys/block/mmcblk0/queue/nr_requests 300
+    write /sys/block/mmcblk0/queue/rq_affinity 0
+
     # Create folder for mm-qcamera-daemon
     mkdir /data/fdAlbum 0770 camera camera
     mkdir /data/misc/camera 0770 camera camera
@@ -102,6 +107,9 @@ on post-fs-data
     mkdir /data/tombstones/dsps 0771 system system
 
     setprop vold.post_fs_data_done 1
+
+    # Create folder for mm-qcamera-daemon
+    mkdir /data/camera 0770 media camera
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
@@ -316,6 +324,9 @@ service time_daemon /system/vendor/bin/time_daemon
     writepid /dev/cpuset/system-background/tasks
 
 on charger
+service charger /charger
+    class charger
+
     wait /dev/block/bootdevice/by-name/system
     mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
     chown root system /sys/class/power_supply/bms/current_now
@@ -363,3 +374,19 @@ service qcom-mem /system/vendor/bin/init.qcom.mem.sh
     write /sys/kernel/mm/ksm/run 1
     write /proc/sys/vm/min_free_kbytes 2919
     write /proc/sys/vm/extra_free_kbytes 6075
+
+service charger_monitor /system/bin/charger_monitor
+    user root
+    group root
+    disabled
+
+service qbcharger /charger -m 1
+    disabled
+    oneshot
+
+on property:sys.qbcharger.enable=true
+    start qbcharger
+
+on property:sys.qbcharger.enable=false
+    stop qbcharger
+
