--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -1,8 +1,7 @@
-#Uncommenting these urls would only enable
-#the power up auto injection and force injection(test case).
-XTRA_SERVER_1=https://xtrapath4.izatcloud.net/xtra3grc.bin
-XTRA_SERVER_2=https://xtrapath5.izatcloud.net/xtra3grc.bin
-XTRA_SERVER_3=https://xtrapath6.izatcloud.net/xtra3grc.bin
+#URLs from which to download XTRA data
+XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 
 #Version check for XTRA
 #DISABLE = 0
@@ -16,13 +15,19 @@ XTRA_VERSION_CHECK=1
 # _CLEAR = 0
 ERR_ESTIMATE=0
 
-# Worldwide
-NTP_SERVER=1.android.pool.ntp.org
+#Test
+NTP_SERVER=time.gpsonextra.net
+#Asia
+# NTP_SERVER=asia.pool.ntp.org
+#Europe
+# NTP_SERVER=europe.pool.ntp.org
+#North America
+# NTP_SERVER=north-america.pool.ntp.org
 
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 0
+DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
@@ -35,10 +40,10 @@ INTERMEDIATE_POS=0
 #GPS_LOCK = 0
 
 # supl version 1.0
-SUPL_VER=0x20000
+SUPL_VER=0x10000
 
 # Emergency SUPL, 1=enable, 0=disable
-SUPL_ES=1
+SUPL_ES=0
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
@@ -72,8 +77,7 @@ CAPABILITIES=0x37
 # FOR SUPL SUPPORT, set the following
 # SUPL_HOST=supl.host.com or IP
 # SUPL_PORT=1234
-SUPL_HOST=supl.google.com
-SUPL_PORT=7276
+
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
 # C2K_PORT=1234
